k8s/apps/semaphore/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  selector:
    app: semaphore
  ports:
  - name: web
    port: 3000
    targetPort: web
    protocol: TCP
