k8s/apps/semaphore/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: semaphore
  namespace: semaphore
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
    sectionName: https
  hostnames:
  - semaphore.colinbruner.com
  - semaphore-internal.colinbruner.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: semaphore
      port: 3000
